...
    }
#endif
}

enum IdentificationOverviewLoadedAction: Equatable {
    case idInteractionEvent(Result<EIDInteractionEvent, IDCardInteractionError>)
    case moreInfo
    case callbackReceived(EIDAuthenticationRequest, PINCallback)
    case confirm
    case failure(IdentifiableError)
}

enum IdentificationOverviewErrorAction: Equatable {
    case retry
}

typealias PINCallback = IdentifiableCallback<String>

enum IdentificationOverviewAction: Equatable {
    case loading(IdentificationOverviewLoadingAction)
    case loaded(IdentificationOverviewLoadedAction)
    case error(IdentificationOverviewErrorAction)
    
    case onAppear
    case cancel
}

let identificationOverviewReducer = Reducer<IdentificationOverviewState, IdentificationOverviewAction, AppEnvironment>.combine(
    identificationOverviewLoadingReducer.pullback(state: /IdentificationOverviewState.loading,
                                                  action: /IdentificationOverviewAction.loading,
                                                  environment: { $0 }),
...
                IdentificationOverviewLoaded(store: loadedStore)
                    .transition(.move(edge: .bottom).combined(with: .opacity))
            }
            CaseLet(state: /IdentificationOverviewState.error,
                    action: IdentificationOverviewAction.error) { errorStore in
                DialogView(store: errorStore.stateless,
                           title: L10n.Identification.FetchMetadataError.title,
                           message: L10n.Identification.FetchMetadataError.body,
                           primaryButton: .init(title: L10n.Identification.FetchMetadataError.retry, action: .retry))
                .transition(.move(edge: .bottom).combined(with: .opacity))
            }
        }
        .toolbar {
...
