import SwiftUI
import ComposableArchitecture

enum FirstTimeUserChoosePINIntroAction: Equatable {
    case `continue`
}

struct FirstTimeUserChoosePINIntroScreen: View {
    
    var store: Store<Void, FirstTimeUserChoosePINIntroAction>
    
...
