...
import Combine

#if PREVIEW

enum ChangePINDebugSequence: Identifiable, Equatable {
    case cancelPINScan
    case cancelCANScan
    case changePINSuccessfully
    case runPINError(remainingAttempts: Int, cancelAction: CancelAction)
    case runNFCError
    case runCardSuspended
    case runCardDeactivated
    case runCardBlocked
...
